# mlx-mcmc

./: .gitignore  LICENSE  PROGRESS.md  README.md  TECHNICAL_OVERVIEW.md  pyproject.toml  setup.py
docs/: DESIGN.md  NUTS_IMPLEMENTATION_PLAN.md
examples/: 01_simple_normal.py  02_hmc_comparison.py  03_ab_testing.py  04_event_rates.py  05_categorical_model.py  06_nuts_comparison.py
mlx_mcmc/: __init__.py
mlx_mcmc/distributions/: __init__.py  base.py  beta.py  categorical.py  exponential.py  gamma.py  halfnormal.py  normal.py
mlx_mcmc/inference/: __init__.py  mcmc.py
mlx_mcmc/kernels/: __init__.py  hmc.py  metropolis.py  nuts.py
tests/: test_distributions.py  test_hmc.py  test_new_distributions.py  test_nuts.py
