[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlx-mcmc"
version = "0.1.0a0"
description = "Bayesian inference for Apple Silicon using MLX"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Tomas Korenblit", email = "tomaskorenblit@gmail.com"}
]
keywords = [
    "bayesian",
    "inference",
    "mcmc",
    "apple-silicon",
    "mlx",
    "probabilistic-programming",
    "hmc",
    "nuts"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "mlx>=0.30.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]
viz = [
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/mlx-mcmc"
Repository = "https://github.com/yourusername/mlx-mcmc"
Issues = "https://github.com/yourusername/mlx-mcmc/issues"
Documentation = "https://github.com/yourusername/mlx-mcmc#readme"

[tool.setuptools]
packages = ["mlx_mcmc", "mlx_mcmc.distributions", "mlx_mcmc.kernels", "mlx_mcmc.inference"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
